// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalDetailLikersLabel /> should render a <FormattedMessage/> when several likers 1`] = `
<span
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <i
    className="cap cap-heart-1 icon--red"
  />
  <FormattedMessage
    id="proposal.likers.count"
    values={
      Object {
        "num": 2,
      }
    }
  />
</span>
`;

exports[`<ProposalDetailLikersLabel /> should render nothing when no likers 1`] = `""`;

exports[`<ProposalDetailLikersLabel /> should render truncated liker name when only one liker 1`] = `
<span
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <i
    className="cap cap-heart-1 icon--red"
  />
  <FormattedMessage
    id="proposal.likers.count"
    values={
      Object {
        "num": 1,
      }
    }
  />
</span>
`;
